add uptake plot

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -94,6 +94,13 @@ lorem ipsum MFA
 
 lorem ipsum MFA
 
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=\textwidth]{uptake.png}
+  \caption{User enrollment in MFA in 2018, from initial rollout to mandatory requirement.}
+  \Description{User enrollment in MFA in 2018, from initial rollout to mandatory requirement.}
+\end{figure*}
+
 \section{Conclusions and Future Work}
 
 lorem ipsum MFA
