--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -88,7 +88,7 @@ lorem ipsum MFA
 
 \section{Requirements}
 
-lorem ipsum MFA
+lorem ipsum MFA \cite{xie2013fast, diffie1977special}
 
 \section{Solutions}
 
@@ -104,5 +104,11 @@ lorem ipsum MFA
 \section{Conclusions and Future Work}
 
 lorem ipsum MFA
+
+%%
+%% The next two lines define the bibliography style to be used, and
+%% the bibliography file.
+\bibliographystyle{ACM-Reference-Format}
+\bibliography{hpcsyspros19}
 
 \end{document}
