add bibliography entries

--- a/hpcsyspros19.bib
+++ b/hpcsyspros19.bib
@@ -18,3 +18,28 @@
   year={1977},
   publisher={IEEE}
 }
+
+@article{m2011totp,
+  title={Totp: Time-based one-time password algorithm},
+  author={M’Raihi, David and Machani, Salah and Pei, Mingliang and Rydell, Johan},
+  journal={Internet Request for Comments},
+  year={2011}
+}
+
+@misc{habets2011,
+  title={OpenSSH certificates},
+  url={https://blog.habets.se/2011/07/OpenSSH-certificates.html},
+  journal={Blargh},
+  publisher={habets.se},
+  author={Habets, Thomas},
+  year={2011},
+  month={Jul}
+}
+
+@manual{redhat2019,
+  title  = {Creating SSH CA Certificate Signing Keys},
+  author = {Red Hat, Inc.},
+  url    = {https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/deployment_guide/sec-creating_ssh_ca_certificate_signing-keys},
+  year   = {2019}
+}
+
