--- a/hpcsyspros19.bib
+++ b/hpcsyspros19.bib
@@ -57,3 +57,10 @@
    url = {https://en.wikipedia.org/wiki/Google_Authenticator},
  }
 
+ @misc{linotp,
+   author = {KeyIdentity GmbH},
+   title = {{LinOTP}},
+   year = {2019},
+   url = {https://www.linotp.org/}
+   }
+
