--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -118,7 +118,7 @@ scientific computing infrastructures.
 As we were not under a formal mandate for MFA, we were not constrained by
 prescriptive standards, so we had the freedom to implement our solution in a
 manner that best supports our users’ scientific needs. In the remainder of this
-paper, we describe the goals of the MFA project at NERSC,  detail specific
+paper, we describe the goals of the MFA project at NERSC, detail specific
 requirements imposed on the project by the communities supported at NERSC,
 present technical and social solutions that were developed through the course of
 the project, and conclude with a summary.
@@ -128,7 +128,7 @@ the project, and conclude with a summary.
 
 The overall goal of the work described in this paper was to enhance security in
 how users authenticate to NERSC systems and services by requiring multiple
-factors while minimizing the impact on users’ ability to get science done. Doing
+factors while minimizing the impact on users' ability to get science done. Doing
 so in a scalable and supportable way across a diverse scientific workload
 presents challenges of a technical and social nature. MFA is not new to most of
 the NERSC user community in their daily lives, but its role in scientific
