add appendix for email text, need to populate

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -491,8 +491,11 @@ requirement is too high, users will look for ways to circumvent it. Thus, we
 introduced the NERSC sshproxy service lessen user and staff burden and better
 enable scientific computing workflows.
 
-
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{hpcsyspros19}
+
+\appendix
+
+\section{Email Text Sent to Users}
 
 \end{document}
